--- a/DM_class_07-09.ipynb
+++ b/DM_class_07-09.ipynb
@@ -2427,14 +2427,172 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "### 부스트 트리\n",
+    "* 부스트 트리에서는 트리들이 순차적으로 구성 -> 각 트리는 이전 트리의 오분류 레코드 고려\n",
+    "1. 단일 트리 생성\n",
+    "2. 잘못 분류된 레코드들에 가장 높은 선택 확률을 제공하는 하나의 표본 추출\n",
+    "3. 새로운 표본을 트리에 학습\n",
+    "4. 단계 2&3 반복\n",
+    "5. 레코드들 분류 위해 가중 투표 사용\n",
+    "6. 가중치의 크기는 구성되는 트리들의 역순으로 부여\n",
+    "\n",
+    "### 로지스택 회귀\n",
+    "* 선형 회귀의 개념을 반응 변수 Y가 범주형인 경우로 확장\n",
+    "* Binary classification\n",
+    "* Proess\n",
+    "* -- 각 클래스에 속하는 확률 추정 : 이진 변수인 경우 클래스 1에 속할 확률을 추정\n",
+    "* -- 각 관측치를 클래스 중 하나로 분류하기 위해 확률값에 대한 컷 오프값 적용"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
+   "execution_count": 64,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: Ignoring invalid distribution -ip (c:\\users\\user\\.conda\\envs\\condapractice\\lib\\site-packages)\n",
+      "WARNING: Ignoring invalid distribution -illow (c:\\users\\user\\.conda\\envs\\condapractice\\lib\\site-packages)\n",
+      "WARNING: Ignoring invalid distribution -ip (c:\\users\\user\\.conda\\envs\\condapractice\\lib\\site-packages)\n",
+      "WARNING: Ignoring invalid distribution -illow (c:\\users\\user\\.conda\\envs\\condapractice\\lib\\site-packages)\n",
+      "ERROR: Could not find a version that satisfies the requirement statsmodel (from versions: none)\n",
+      "ERROR: No matching distribution found for statsmodel\n",
+      "WARNING: Ignoring invalid distribution -ip (c:\\users\\user\\.conda\\envs\\condapractice\\lib\\site-packages)\n",
+      "WARNING: Ignoring invalid distribution -illow (c:\\users\\user\\.conda\\envs\\condapractice\\lib\\site-packages)\n",
+      "WARNING: Ignoring invalid distribution -ip (c:\\users\\user\\.conda\\envs\\condapractice\\lib\\site-packages)\n",
+      "WARNING: Ignoring invalid distribution -illow (c:\\users\\user\\.conda\\envs\\condapractice\\lib\\site-packages)\n",
+      "WARNING: Ignoring invalid distribution -ip (c:\\users\\user\\.conda\\envs\\condapractice\\lib\\site-packages)\n",
+      "WARNING: Ignoring invalid distribution -illow (c:\\users\\user\\.conda\\envs\\condapractice\\lib\\site-packages)\n",
+      "WARNING: Ignoring invalid distribution -ip (c:\\users\\user\\.conda\\envs\\condapractice\\lib\\site-packages)\n",
+      "WARNING: Ignoring invalid distribution -illow (c:\\users\\user\\.conda\\envs\\condapractice\\lib\\site-packages)\n",
+      "WARNING: Ignoring invalid distribution -ip (c:\\users\\user\\.conda\\envs\\condapractice\\lib\\site-packages)\n",
+      "WARNING: Ignoring invalid distribution -illow (c:\\users\\user\\.conda\\envs\\condapractice\\lib\\site-packages)\n",
+      "ERROR: Could not find a version that satisfies the requirement LogisticIT (from versions: none)\n",
+      "ERROR: No matching distribution found for LogisticIT\n",
+      "WARNING: Ignoring invalid distribution -ip (c:\\users\\user\\.conda\\envs\\condapractice\\lib\\site-packages)\n",
+      "WARNING: Ignoring invalid distribution -illow (c:\\users\\user\\.conda\\envs\\condapractice\\lib\\site-packages)\n",
+      "WARNING: Ignoring invalid distribution -ip (c:\\users\\user\\.conda\\envs\\condapractice\\lib\\site-packages)\n",
+      "WARNING: Ignoring invalid distribution -illow (c:\\users\\user\\.conda\\envs\\condapractice\\lib\\site-packages)\n",
+      "WARNING: Ignoring invalid distribution -ip (c:\\users\\user\\.conda\\envs\\condapractice\\lib\\site-packages)\n",
+      "WARNING: Ignoring invalid distribution -illow (c:\\users\\user\\.conda\\envs\\condapractice\\lib\\site-packages)\n"
+     ]
+    },
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'mord'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mModuleNotFoundError\u001B[0m                       Traceback (most recent call last)",
+      "Input \u001B[1;32mIn [64]\u001B[0m, in \u001B[0;36m<cell line: 7>\u001B[1;34m()\u001B[0m\n\u001B[0;32m      5\u001B[0m get_ipython()\u001B[38;5;241m.\u001B[39msystem(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mpip install LogisticIT\u001B[39m\u001B[38;5;124m'\u001B[39m)\n\u001B[0;32m      6\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01mstatsmodels\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mapi\u001B[39;00m \u001B[38;5;28;01mas\u001B[39;00m \u001B[38;5;21;01msm\u001B[39;00m\n\u001B[1;32m----> 7\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mmord\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m LogisticIT\n\u001B[0;32m      8\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01mmatplotlib\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mpylab\u001B[39;00m \u001B[38;5;28;01mas\u001B[39;00m \u001B[38;5;21;01mplt\u001B[39;00m\n\u001B[0;32m      9\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01mseaborn\u001B[39;00m \u001B[38;5;28;01mas\u001B[39;00m \u001B[38;5;21;01msns\u001B[39;00m\n",
+      "\u001B[1;31mModuleNotFoundError\u001B[0m: No module named 'mord'"
+     ]
+    }
+   ],
+   "source": [
+    "from pathlib import Path\n",
+    "from sklearn.linear_model import LogisticRegression, LogisticRegressionCV\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "!pip install statsmodel\n",
+    "!pip install LogisticIT\n",
+    "import statsmodels.api as sm\n",
+    "from mord import LogisticIT\n",
+    "import matplotlib.pylab as plt\n",
+    "import seaborn as sns\n",
+    "import dmba\n",
+    "from dmba import classificationSummary, gainsChart, liftChart\n",
+    "from dmba.metric import AIC_score"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### 분류 문제 : 이산적 값 중 하나를 선택하는 모델, '분류 모델' 이라고 부름\n",
+    "* 문제점\n",
+    "* -f(x)의 값이 1 이상이나 0 이하로 나올 수 있음\n",
+    "* -각 feature 들이 Y에 영향을 주는 것을 해석하는 문제\n",
+    "* -사건의 발생 여부는 이산적인데 실제 f(x) 수식은 연속적\n",
+    "\n",
+    "### 로지스틱 회귀\n",
+    "* 이진 분류(binary classification)문제를 표현\n",
+    "* 어떤 사건이 일어날 확률을 P(X)로 나타내고 일어나지 않을 확률을 1 - P(X)로 나타냄 (0 <= P(X) < = 1)\n",
+    "* 오즈비(odds ratio) : 어떤 사건이 일어날 확률과 일어나지 않을 확률의 비율   P(X)/1-P(X)\n",
+    "\n",
+    "### Logit Function\n",
+    "* 오즈비에 상용로그를 붙인 수식 log(P(x)/1-P(x))\n",
+    "* logit(p(y = 1|x))\n",
+    "* 로짓함수의 역함수 => sigmoid function 시그모이드 함수 1/1+e^(-z), 그래프가 S자 커브 형태\n",
+    "\n",
+    "### Sigmoid Function\n",
+    "* y값을 확률 p로 표현\n",
+    "* z 값은 선형회귀와 같이 가중치와 feature의 선형 결합(linear combination)으로 표현 가능\n",
+    "\n",
+    "### Hypothesis Function\n",
+    "* z는 가중치 값과 feature 값의 선형 결합\n",
+    "\n",
+    "### Cost Function\n",
+    "* 먼저 비용함수를 정의하고 예측값과 실제값 간의 차이를 최소화하는 방향으로 학습 -> 비용 최소화\n",
+    "* 실제값이 1일 때와 실제값이 0일 때 각각 다르게 비용함수를 정의\n",
+    "\n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 예제 : 개인 대출 신청 수락\n",
+    "### 로지스틱 모형\n",
+    "* 로지스틱 회귀에서 Y와 b의 관계는 비선형 -> 최소 제곱법\n",
+    "* Maximum likeihood : 주어진 데이터를 얻을 가능성을 최대화하는 추정치 찾음(MLE), 반복 추정 핵심\n",
+    "* 예시----> 예측값이 클 수록 제안 수락\n",
+    "\n",
+    "### 검증 데이터셋에서 네 명의 고객에 대한 경향\n",
+    "* 추정된 로지스틱 회귀식으로부터 검증셋의 각 레코드에 대해 클래스에 속할 확률 예측\n",
+    "* 실제와 예측을 비교. Default cut-off : 0.5\n",
+    "\n",
+    "### 누적 이득 차트와 십분위 향상 차트\n",
+    "* 누적 차트에서 기준선 보다 위에 위치한 향상 곡선\n",
+    "* '1'로 분류될 확률이 높은 레코드를 10% 선택한 경우는 레코드를 임의로 10% 선발한 경우보다 7.6배(예시) 높음"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### 예제 : 연착 항공편 예측\n",
+    "* 예측 변수에 대한 평균 연착률의 막대그래프 생성\n",
+    "* 항공편 연착을 탐색하기 위한 히트맵 생성 코드 -> 요일 출발 공항, 항공사에 의한 연착 항공편 비율"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
     }
    }
   }
