--- a/DM_class_07-09.ipynb
+++ b/DM_class_07-09.ipynb
@@ -2595,6 +2595,108 @@
      "name": "#%% md\n"
     }
    }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "---------------------------------------"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# 09. 신경망"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "outputs": [],
+   "source": [
+    "from pathlib import Path\n",
+    "\n",
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.neural_network import MLPClassifier\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "import dmba\n",
+    "from dmba import classificationSummary"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 신경망 : 개요\n",
+    "* 인간의 뇌는 치밀하게 뉴런 약 1,000억 개로 이루어져 있음\n",
+    "* 뉴런과 뉴런 사이에는 시냅스라는 연결 부위가 있는데, 신경 말단에서 자극을 받으면 시냅스에서 화학 물질이 나와 전위 변화를 일으킴\n",
+    "* 전위가 임계 값을 넘으면 다음 뉴런으로 신호를 전달하고, 임계 값에 미치지 못하면 아무것도 하지 않음\n",
+    "* 이 메커니즘은 우리가 앞서 배운 로지스택 회귀와 많이 닮았음\n",
+    "* 이 간단한 회로는 입력 값을 놓고 활성화 함수에 의해 일성한 수준을 넘으면 참을, 그렇지 않으면 거짓을 내보내는 일을 하는데 뉴런과 유사\n",
+    "\n",
+    "### 신경망 : XOR\n",
+    "* 사각형 종이에 검은색 두 개와 흰색 점 두 개가 놓여 있을 때 네 점 사이에 직선을 하나 긋는다고 가정\n",
+    "* 직선의 한쪽 편에는 검은색 점만 있고, 다른 한쪽에는 흰색 점만 있게끔 선을 그을 수 있을까?  --> NOPE\n",
+    "* XOR 문제는 논리 회로에 등장하는 개념\n",
+    "* 컴퓨터는 두 가지의 디지털 값, 즉 0과 1을 입력해 하나의 값을 출력하는 회로가 모여 만들어지는데 이 회로는 '게이트(gate)'라고 함\n",
+    "* 그림 7-5는 AND 게이트, OR 게이트, XOR  게이트에 대한 값을 정리한 것\n",
+    "* AND 게이트는 x1과 x2 둘 다 1일 때 결과값이 1로 출력\n",
+    "* OR 게이트는 둘 중 하나라도 1이면 결과값이 1로 출력\n",
+    "* XOR 게이트는 둘 중 하나만 1일 때 1이 출력\n",
+    "\n",
+    "### 신경망 : XOR\n",
+    "* XOR 문제 해결 방법\n",
+    "* X1과 X2 두 연산으로 보냄 -> 첫 번째에 NAND 처리 -> 동시에 두 번째에 OR 처리 -> 두 개의 연산을 통해 구한 결과 값 1 & 2를 통해 AND 처리\n",
+    "\n",
+    "### 신경망\n",
+    "* 입력 변수 간, 입력 변수 - 결과 변수 간의 복잡한 관계를 파악하는 방법\n",
+    "* 예측 변수 정보를 결합!\n",
+    "* 개발자가 올바른 형태를 지정할 필요 없음. 신경망은 관계를 데이터를 통해 학습\n",
+    "* 선형/로지스틱 회귀분석 -> 입력층과 출력층만 있는 형태의 신경망 (은닉층 X)\n",
+    "* 다층 전방향 신경망 (Multi-layer feedforward networks)\n",
+    "* --예측 변수 값을 받는 노드들이 있는 입력층 + 이전 층 들에서 입력 받는 노드들로 이루어진 층들이 연속적으로 구성\n",
+    "* -- 각 층에 있는 노드들의 출력 == 다음 층에 있는 노드들의 입력\n",
+    "* -- 마지막 층은 출력층이며, 입력과 출력 사이에 있는 층은 입력층\n",
+    "* -- m 개의 클래스로 이뤄진 분류 문제 ? m개의 출력 노드\n",
+    "\n",
+    "### 신경망 : 다중 퍼셉트론\n",
+    "* 입력층과 출력층 사이에 숨어 있는 은닉층을 만드는 것\n",
+    "* 입력 값 (X1 & X2)은 각 값에 가중치(w)를 곱하고 편향(b)를 더해 은닉층으로 전송\n",
+    "* 노드(n1, n2)를 은닉층이라고 함\n",
+    "* 은닉층에 취합된 값들은 활성화 함수를 통해 다음으로 보냄\n",
+    "* 식 두 개의 결과 값이 출력층의 방향으로 보내지고, 출력층으로 전달된 값은 활성화 함수를 통해 y_hat 값을 정하게 됨\n",
+    "\n",
+    "### 신경망 : 데이터 전처리\n",
+    "* 로지스틱 활성 함수(scikit-learn에서 activation = 'logistic') -> 신경망은 예측 변수들과 결과 변수가 [0,1] 상의 값일 떄 최상으로 작동\n",
+    "* -> 모든 변소 값은 신경망에 입력되기 전에 [0,1] 사이의 값으로 맞춰져야 함\n",
+    "* [a,b] 상의 값을 취하는 수치 변슈 X에 대해 a를 뺴고 b-a로 나누어 측정값을 정규화 함\n",
+    "* 비대칭 예측 변수들의 변환 필요\n",
+    "* 활성 함수 다양화 (예> acivation{'identy', 'logistic', 'tanh', 'relu'}, default = 'relu')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
   }
  ],
  "metadata": {
