--- a/DM_class_07-09.ipynb
+++ b/DM_class_07-09.ipynb
@@ -2689,7 +2689,33 @@
     "* -> 모든 변소 값은 신경망에 입력되기 전에 [0,1] 사이의 값으로 맞춰져야 함\n",
     "* [a,b] 상의 값을 취하는 수치 변슈 X에 대해 a를 뺴고 b-a로 나누어 측정값을 정규화 함\n",
     "* 비대칭 예측 변수들의 변환 필요\n",
-    "* 활성 함수 다양화 (예> acivation{'identy', 'logistic', 'tanh', 'relu'}, default = 'relu')"
+    "* 활성 함수 다양화 (예> acivation{'identy', 'logistic', 'tanh', 'relu'}, default = 'relu'\n",
+    "\n",
+    "### 신경망 : Back Propagation\n",
+    "* 파라미터 개수가 많으면 각각의 가중치(weight)와 편향(bias)을 학습시키는 것이 어려움\n",
+    "* 은닉층에 포함된 가중치를 업데이트할 방법이 없음\n",
+    "* 기존의 신경망은 입력/출력 값을 알고 있는 상태에서 w, b를 넣음\n",
+    "* 역전파(back propagation)는 출력층에서부터 거꾸로 은닉층들로 오차가 계산\n",
+    "* (예측값과 실제값의 차이를 최소화하는 방향으로 반복학습 ㄱㄱ)\n",
+    "* Procedure\n",
+    "1. 순방향 계산을 통해 각 가중치의 초기 값 정해짐\n",
+    "2. 초기 값의 가중치로 만들어진 값과 실제 값을 비교해 출력층의 오차를 계산\n",
+    "3. 목표 = 이때 계산된 출력층의 오차를 최소화시키는 것\n",
+    "4. 이를 위해 오차를 편미분하면서 가중치 수정 과정을 거침\n",
+    "* -> 은닉층이 깊을 떄 역전파 알고리즘을 진행할수록 Gradient Vanishing이 일어남"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 예제 : TinyData\n",
+    "### 특정 방식으로 가공된 치즈에 대한 시식 정보"
    ],
    "metadata": {
     "collapsed": false,
