--- a/DM_class_07-09.ipynb
+++ b/DM_class_07-09.ipynb
@@ -2622,7 +2622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
@@ -2715,12 +2715,189 @@
    "cell_type": "markdown",
    "source": [
     "## 예제 : TinyData\n",
-    "### 특정 방식으로 가공된 치즈에 대한 시식 정보"
+    "### 특정 방식으로 가공된 치즈에 대한 시식 정보\n",
+    "* 관측/지방 점수/염분 점수/ 수용 여부\n",
+    "* 가중치와 편향 값은 0 근처로 초기화 -> 예측 변수가 없는 모델과 마찬가지임(신경망에 선지식 없는 상태)\n",
+    "* N3 노드의 초기 편향과 가중치가 w1, 3 = 0.05, w2, 3 = 0.01, // - 0.3\n",
+    "\n",
+    "* 가중치 갱신(학습)을 위해 모델의 오차를 사용하는 back propagation 방법 알고리즘\n",
+    "* 출력층에서부터 거꾸로 은닉층들로 오차가 계산됨\n",
+    "* 학습 중단 기준?\n",
+    "* 1. 편향과 가중치들의 새로운 값이 이전 반복에서 얻은 값과 차이가 적을 떄\n",
+    "* 2. 오분류율이 필요한 목표 값에 도달\n",
+    "* 3. 실행 횟수(iteration)제한 도달"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Intercepts\n",
+      "[array([0.13368043, 4.0724755 , 7.00768105]), array([14.30748672])]\n",
+      "Weight\n",
+      "[array([[ -1.3065648 ,  -4.20427795, -13.29587332],\n",
+      "       [ -0.04399728,  -4.91606922,  -6.03356987]]), array([[ -0.27348313],\n",
+      "       [ -9.01211575],\n",
+      "       [-17.63504688]])]\n",
+      "   Obs.  Fat  Salt Acceptance   dislike      like\n",
+      "0     1  0.2   0.9       like  0.000490  0.999510\n",
+      "1     2  0.1   0.1    dislike  0.999994  0.000006\n",
+      "2     3  0.2   0.4    dislike  0.999741  0.000259\n",
+      "3     4  0.2   0.5    dislike  0.997368  0.002632\n",
+      "4     5  0.4   0.5       like  0.002133  0.997867\n",
+      "5     6  0.3   0.8       like  0.000075  0.999925\n"
+     ]
+    }
+   ],
+   "source": [
+    "# TinyData셋에 대한 신경망\n",
+    "ex_df = pd.read_csv('https://raw.githubusercontent.com/kwartler/Harvard_DataMining_Business_Student/master/BookDataSets/tinydata.csv')\n",
+    "\n",
+    "predictors = ['Fat', 'Salt']\n",
+    "outcome = 'Acceptance'\n",
+    "\n",
+    "X = ex_df[predictors]\n",
+    "y = ex_df[outcome]\n",
+    "classes = sorted(y.unique())\n",
+    "\n",
+    "# sklearn의 신경망 모듈 MLP 활용하여 다중 퍼셉트론 분류 모델. 은닉 중 3개 활성 함수 = 로지스택, lbfgs 알고리즘\n",
+    "clf = MLPClassifier(hidden_layer_sizes =(3), activation = 'logistic', solver = 'lbfgs', random_state = 1)\n",
+    "clf.fit(X, y)\n",
+    "clf.predict(X)\n",
+    "\n",
+    "#신경망 구조\n",
+    "print('Intercepts')\n",
+    "print(clf.intercepts_)\n",
+    "\n",
+    "print('Weight')\n",
+    "print(clf.coefs_)\n",
+    "\n",
+    "# 예측\n",
+    "print(pd.concat([ex_df, pd.DataFrame(clf.predict_proba(X), columns = classes)\n",
+    "                 ], axis = 1))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hidden later 2 => 3\n",
+      " Intercepts:\n",
+      "  [0.13368043 4.0724755  7.00768105]\n",
+      " Weights:\n",
+      "  [ -1.3065648   -4.20427795 -13.29587332]\n",
+      "  [-0.04399728 -4.91606922 -6.03356987]\n",
+      "\n",
+      "Output layer 3 => 1\n",
+      " Intercepts:\n",
+      "  [14.30748672]\n",
+      " Weights:\n",
+      "  [-0.27348313]\n",
+      "  [-9.01211575]\n",
+      "  [-17.63504688]\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 신경망 레이어 별 프린트\n",
+    "for i, (weights, intercepts) in enumerate(zip(clf.coefs_, clf.intercepts_)): # 신경망 네트워크의 각 가중치 및 절편 집합 반복 루프. clf.coefs_ : 가중치 행렬 & clf.intercepts_ : 절편 벡터 목록\n",
+    "    print('Hidden later' if i == 0 else 'Output layer', '{0[0]} => {0[1]}'.format(weights.shape))    # 현재 레이어 번호 인쇄 ==> 은닉층 간 가중치 시각화\n",
+    "    print(' Intercepts:\\n ', intercepts)\n",
+    "    print(' Weights:')\n",
+    "    for weight in weights:     # 현재 레이어와 각 가중치 벡터 반복\n",
+    "        print(\" \", weight)\n",
+    "    print()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Confusion Matrix (Accuracy 1.0000)\n",
+      "\n",
+      "        Prediction\n",
+      " Actual dislike    like\n",
+      "dislike       3       0\n",
+      "   like       0       3\n"
+     ]
+    }
+   ],
+   "source": [
+    "classificationSummary(y, clf.predict(X), class_names = classes)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### 예제 : 사고의 심각성 분류\n",
+    "#### 데이터 설명\n",
+    "* alchl_I : 음주(1)/비음주(2)\n",
+    "* profil_I_R : 도로 : 평평(1)/기타(0)\n",
+    "* Sur_cond : 노면 상태: 건조(1)/젖음(2)/눈(3)/결빙(4)/모름(9)\n",
+    "* veh_invl : 관련 차량 수\n",
+    "* max_sev_ir : 상해 정도 무상해(0)/상해(1)/치명(2)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "accidents_df = pd.read_csv('https://raw.githubusercontent.com/kwartler/Harvard_DataMining_Business_Student/master/BookDataSets/accidentsnn.csv')\n",
+    "input_vars = ['ALCHL_I', 'PROFIL_I_R', 'VEH_INVL']\n",
+    "\n",
+    "accidents_df.SUR_COND = accidents_df.SUR_COND.astype('category')\n",
+    "accidents_df.MAX_SEV_IR = accidents_df.MAX_SEV_IR.astype('category')\n",
+    "\n",
+    "# 범주형 데이터를 더미 변수로 변경"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
     }
    }
   }
