--- a/DM_class_11.ipynb
+++ b/DM_class_11.ipynb
@@ -53,14 +53,44 @@
    }
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
+   "cell_type": "markdown",
+   "source": [
+    "### 군집 분석 : 고려 사항\n",
+    "* 군집 분석은 데이터 변동에 민감함 -> 관측치를 하나만 제거해도 군집이 달라질 수 있음\n",
+    "* k-평균 군집 방법이나 계층적 군집 방법 모두 모든 관측치에 군집을 할당함\n",
+    "* 데이터 수집 오류 또는 이상 현상으로 발생한 데이터 (outlier)가 포함된 경우 어디에도 속하지 않지만 알고리즘에 의해 불가피하게 군집에 속하게 되는 관측치가 발생할 수 있음\n",
+    "* 이런 경우 해당 관측치로 인해 군집이 왜곡될 수 있음\n",
+    "-> 모둔 관측치에 군집을 할당하는 것이 적절하지 않을 수 있음 이런 경우 혼합 모델(EM, expectation-maximization -> GMM, Gausian Mixture Modeling)을 이용해 문제를 개선할 수 있음\n",
+    "\n",
+    "### 군집 분석 : 수치형 거리 측도\n",
+    "\n",
+    "### K-평균 군집화 : 최적 K\n",
+    "* 전역 최적이 아닌 국소 최적을 찾기 떄문에 초기 군집에 따라 결과가 달라짐\n",
+    "* 군집 초기값을 다르게 하여 여러 번 실행한 뒤 각 결과를 비교해 목적 함수를 최소화\n",
+    "* 사전에 산점도 등을 통해 데이터 특성을 확인해 데이터가 뭉쳐 있는 그룹의 수를 k값으로 선택하는 방법 활용(변수 2개!)\n",
+    "* 변수의 숫자가 많은 경우 산점도 행렬을 이용해 각 변수들의 관계를 통해 특성을 파악하거나 주성분 분석이나 오토 - 인코더(auto-encoder)와 같은 차원 축소 방법을 이용해 변수의 수를 줄여 특성이나 방법을 파악하는 방법을 이용할 수 있음\n",
+    "\n",
+    "### K - medoids 군집화\n",
+    "* K-means는 중심으로부터 거리를 기반으로 군집화하기 때문에 구형으로 뭉쳐져 있는 볼록한 데이터 셋에는 비교적 잘 적용되나, 오목한 형태의 군집 모델의 특성을 구별해 내는데 문제를 보임\n",
+    "* 동 떨어져 있는 데이터나 노이즈에 매우 민감하게 반응하며, 사전에 클러스터 개수를 정해야 하는 것도 단점. 초기 클러스터를 어떻게 선택하느냐에 따라 글로벌 최소값에 도달하지 못하는 경우도 있음\n",
+    "* 클러스터의 중심을 좌표평면상 임의의 점이 아니라 데이터셋의 값 중 하나를 선정해 실제 데이터셋에 있는 값을 중심점으로 하기 때문에 이상치와 노이즈 처리가 우수하고, 매우 강건(robust)하게 수렴하는 방법\n",
+    "\n",
+    "### 계층적 군집화 : 개요\n",
+    "* 한 군집 내에 부분 군집을 혀용하는 방법으로 덴드로그램을 이용한 시각화를 활용해 군집의 수를 결정할 수 있다는 장점이 잇음\n",
+    "* 계층적 군집은 부분 군집을 허용하기 위해 전체 데이터를 하나의 군집으로 하고 이를 부분 군집으로 나눈 후, 각 부분 군집을 다시 나누는 계층 형식의 군집화 방법을 이용\n",
+    "* 사전에 군집 수를 정할 필요가 없음\n",
+    "* 덴드로그램을 이용해 시각적으로 이해가 쉽고 적당한 군집 수 선정이 용이\n",
+    "* 계층적 군집은 위사결정나무의 생성 과정과 역순으로 계층 구조를 만듦. 개별 관측치에서 시작해 이들을 묶어 나가는 방법을 이용하며 이를 하향식 응집이라고 함\n",
+    "\n",
+    "### 계층적 군집화 : 분할적 군집화와의 비교\n",
+    "* 계층적 군집분석은 군집 특성상 분할적 군집분석보다 많은 정보를 파악할 수 있음\n",
+    "* 각 관측치들이 얼마나 가까운지 이질적인지 등에 대한 정보를 시각적으로 보다 상세하게 알 수 있어 유용\n",
+    "* But 계층적 군집분석이 분할적 군집분석보다 좋은 것은 아님  --> 계층적 군집 분석은 특성들이 뒤석여 부정확한 결과 얻을 위험 있음"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%% md\n"
     }
    }
   }
