--- a/DM_class_11.ipynb
+++ b/DM_class_11.ipynb
@@ -63,6 +63,12 @@
     "-> 모둔 관측치에 군집을 할당하는 것이 적절하지 않을 수 있음 이런 경우 혼합 모델(EM, expectation-maximization -> GMM, Gausian Mixture Modeling)을 이용해 문제를 개선할 수 있음\n",
     "\n",
     "### 군집 분석 : 수치형 거리 측도\n",
+    "* Norm : 벡터의 크기 or 길이 측정 함수\n",
+    "* 민코우스키 거리 : Norm의 일반화 표현\n",
+    "* 유클리드 거리 : 두 개체 i와 j사이의 거리(2-norm)\n",
+    "* 맨하탄 거리 : 1-norm\n",
+    "* 상관 계수 활용 : Pearson, Cosine (Eisen), Kendall\n",
+    "* 마할라노비스 : 변수 분산과 공분산 구조\n",
     "\n",
     "### K-평균 군집화 : 최적 K\n",
     "* 전역 최적이 아닌 국소 최적을 찾기 떄문에 초기 군집에 따라 결과가 달라짐\n",
@@ -85,12 +91,47 @@
     "### 계층적 군집화 : 분할적 군집화와의 비교\n",
     "* 계층적 군집분석은 군집 특성상 분할적 군집분석보다 많은 정보를 파악할 수 있음\n",
     "* 각 관측치들이 얼마나 가까운지 이질적인지 등에 대한 정보를 시각적으로 보다 상세하게 알 수 있어 유용\n",
-    "* But 계층적 군집분석이 분할적 군집분석보다 좋은 것은 아님  --> 계층적 군집 분석은 특성들이 뒤석여 부정확한 결과 얻을 위험 있음"
+    "* But 계층적 군집분석이 분할적 군집분석보다 좋은 것은 아님  --> 계층적 군집 분석은 특성들이 뒤석여 부정확한 결과 얻을 위험 있음\n",
+    "\n",
+    "### 계층적 군집화 : 연결 종류\n",
+    "* 단일 연결법 : 군집의 관측치들의 거리를 계산, 그리고 계산된 거리 중 가장 작은 값을 두 군집의 거리로 결정. 각 군집의 거리가 가장 작은, 즉 유사도가 높은 군집을 다음 단걔에서 하나의 군집으로 묶음\n",
+    "* 완전 연결법 : 단일 연결법과 달리 각 군집 내 관측치 거리 간 제일 큰 값을 ㄱㄱ 군집의 거리로 취급\n",
+    "* 평균 연결법 : 각 군집 내 관측치들이 평균 거리를 군집의 거리로 취급\n",
+    "* 중심 연결법 : 각 군집 내 모든 관측치 간의 거리를 계산하고 이 거리의 무게 중심을 군집들 간의 거리로 취급. 각 군집이 덴드로그램에서 개별 클러스터 중 어느 하나보다 낮은 높이에서 융합될 수 있음 (Inversion 문제)\n",
+    "* 와드 방법  각 군집이 합쳐졌을 때 중심 군집(군집 내 관측치들의 평균)과 각 관측치 간의 차이 제곱을 거리로 이용. 만약 주어진 두 군집이 서로 이질적이라면, 이 두 군집을 병합할 경우 군집 중심과 각 관측치들의 거리가 상당히 커지기 때문에 유용하게 이용할 수 있는 방법\n",
+    "\n",
+    "### 계층적 군집화 : 결과의 평가 척도\n",
+    "* 응집도 (Cohesion): 하나의 군집 안에 있는 레코드들이 얼마나 근접해 있는가 나타내는 지표\n",
+    "* 격리도 (Seperation) : 하나의 군집이 다른 군집들과 얼마나 분리되어 있는지를 나타내는 지표\n",
+    "* 실루엣 계수 (Silhouette coefficient) : 해당 데이터가 얼마나 같은 군집 내의 데이터와 얼마나 가깝게 군집화 돼 있고, 다른 군집에 있넌 데이터와는 얼마나 멀리 분리돼 있는지를 나타내는 지표\n",
+    "* ---> 군집 내 응접도를 최소화, 격리도를 최대화, 실루엣 계수가 1에 가까울수록 우수한 군집\n",
+    "\n",
+    "### 계층적 군집화 : Dendrogram\n",
+    "* 각 단계에서 관측치의 군집화를 통해 형성된 그룹과 이들이 유사성 수준을 표시하는 트리 다이어그램통\n",
+    "* 유사성 수준은 수직 축을 따라 측정되거나  사용자가 거리 수준을 표시할 수 있는데 다른 관측치는 수평 축을 따라 나열. 처음으로 묶이는 두 관측치는 매우 유사성이 높음\n",
+    "* 덴드로그램의 높이는 각 관측치 떨어지 정도를 의미하고, 적절한 기준 높이를 통해 군집을 결정할 수 있음\n",
+    "* 보통은 원하는 군집의 수와 덴드로그램을 비교하여 기준점을 결정. 덴드로그램의 절단 점은 k-means clustering의 클러스터 수 k 같은 역할을 함"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
     }
    }
   }
