--- a/DM_class_11.ipynb
+++ b/DM_class_11.ipynb
@@ -121,13 +121,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import"
+    "import matplotlib.pyplot as plt\n",
+    "import koreanize_matplotlib"
    ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
